[package]
name = "untis_changes"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["alloc", "serde"] }
rocket = { version = "0.5.1", features = ["json", "uuid", "serde_json"] }
uuid = { version = "1.8.0", features = ["v4"] }
